--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "angular-route": "1.2.16",
     "angular-ui-sortable": "~0.12.8",
     "jquery-ui": "~1.11.0",
-    "angular-local-storage": "~0.0.5"
+    "angular-local-storage": "~0.0.5",
+    "firebase": "~1.0.18",
+    "angularfire": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
